WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240228
AXLogger::streamAXCoreObject is missing a null check for AccessibilityObject dynamicDowncast
https://bugs.webkit.org/show_bug.cgi?id=240228
Summary
AXLogger::streamAXCoreObject is missing a null check for AccessibilityObject ...
Tyler Wilcock
Reported
2022-05-09 04:52:01 PDT
AXLogger::streamAXCoreObject is missing a null check for AccessibilityObject dynamicDowncast
Attachments
Patch
(1.78 KB, patch)
2022-05-09 04:55 PDT
,
Tyler Wilcock
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-09 04:52:09 PDT
<
rdar://problem/92954295
>
Tyler Wilcock
Comment 2
2022-05-09 04:55:57 PDT
Created
attachment 459039
[details]
Patch
EWS
Comment 3
2022-05-09 09:43:05 PDT
Committed
r293978
(
250416@main
): <
https://commits.webkit.org/250416@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459039
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug