AXLogger::streamAXCoreObject is missing a null check for AccessibilityObject dynamicDowncast https://bugs.webkit.org/show_bug.cgi?id=240228

Reviewed by Andres Gonzalez.

When checking if an object has display:contents, we do:

if (auto* axObject = dynamicDowncast<AccessibilityObject>(&object); axObject->hasDisplayContents())

Which does not have a nullcheck for when the dynamicDowncast fails (i.e. because
the object is not an AccessibilityObject).

* accessibility/AXLogger.cpp:
(WebCore::streamAXCoreObject):

Canonical link: https://commits.webkit.org/250416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293978 268f45cc-cd09-0410-ab3c-d52691b4dbfc